# P1-Deep-Learning-P2026

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0-abg.ipynb  project_1.ipynb
p1_deep_learning_p2026/: __init__.py  dataset.py  features.py  plots.py
p1_deep_learning_p2026/modeling/: predict.py  train.py
