[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "p1_deep_learning_p2026"
version = "0.0.1"
description = "Repository for the first project of the Deep Learning Class of P2026"
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["p1_deep_learning_p2026"]
include = ["pyproject.toml", "p1_deep_learning_p2026/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["p1_deep_learning_p2026"]
force-sort-within-sections = true

